--- a/PhotoGallery/app/src/main/AndroidManifest.xml
+++ b/PhotoGallery/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
@@ -20,6 +21,15 @@
             </intent-filter>
         </activity>
         <service android:name=".PollService" />
+        <!--
+        使用receiver标签并在其中包含相应的intent-filter。
+        StartupReceiver会监听BOOT_COMPLETED操作。
+        -->
+        <receiver android:name=".StartupReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
